<resources>
    <string name="app_name">CriminalIntent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_details_label">DETAILS</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_title_label">TITLE</string>
    <string name="date_dialog_title">Crime date:</string>
    <string name="date_dialog_ok_label">OK</string>
    <string name="new_crime">New Crime</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="no_crimes">No crimes</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%d crime</item>
        <item quantity="other">%d crimes</item>
    </plurals>
    <string name="choose_suspect_label">CHOOSE SUSPECT</string>
    <string name="send_crime_report_label">SEND CRIME REPORT</string>
    <string name="call_suspect_label">CALL SUSPECT</string>
    <string name="crime_report">%1$s! Crime discovered on %2$s. %3$s and %4$s.</string>
    <string name="crime_report_solved">Crime is solved</string>
    <string name="crime_report_unsolved">Crime is not solved</string>
    <string name="crime_report_suspect">%s is the suspect</string>
    <string name="crime_report_nosuspect">the suspect is unknown</string>
    <string name="crime_report_chooser_title">Sent crime report via</string>
</resources>
