<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/crime_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        style="?android:attr/listSeparatorTextViewStyle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        tools:text="Crime Title"
        android:ems="10"
        android:id="@+id/crime_title"
        android:hint="@string/crime_title_hint"/>

    <TextView
        android:text="@string/crime_details_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        style="?android:attr/listSeparatorTextViewStyle" />

    <Button
        tools:text="Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crime_date"
        />

    <CheckBox
        android:text="@string/crime_solved_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crime_solved" />

    <Button
        android:text="@string/choose_suspect_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choose_suspect"/>

    <Button
        android:text="@string/send_crime_report_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/send_crime_report"/>

    <Button
        android:text="@string/call_suspect_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/call_suspect"/>
</LinearLayout>
